# sql_dbs

./: .gitignore  README.md  example.db  expenses.db  pyproject.toml  safe_close.db  todo.db  tutorial.db
src/expense_tracker/: main.py
src/sql_dbs/: __init__.py
src/sqlite_db/: connection_shortcut.py  context_manager.py  intro.py  read_sqlite3_by_pandas.py  safe_close.py  tutorial.py  uri_tricks.py
src/todo_app/: main.py
