[project]
name = "sql-dbs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "haongnd2280", email = "hao.ngnd2285@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
sql-dbs = "sql_dbs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
