[project]
name = "sqlite_db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "haongnd2280", email = "hao.ngnd2285@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
]

[project.scripts]
sql-dbs = "sqlite_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
